name:                   hubspot
version:                0.0.3
synopsis:               Implementation of parts of the HubSpot API
homepage:               https://www.github.com/docmunch/haskell-hubspot
license:                MIT
license-file:           LICENSE
author:                 Sean Leather
maintainer:             sean@doxiq.com
copyright:              2014-2015 Daggerboard, Inc.
category:               Web
build-type:             Simple
-- extra-source-files:     README.md
cabal-version:          >=1.10

library
  hs-source-dirs:       src
  ghc-options:          -Wall
  default-language:     Haskell2010
  exposed-modules:
                        Web.HubSpot
                        Web.HubSpot.Auth
                        Web.HubSpot.Contacts
                        Web.HubSpot.Contacts.Properties
                        Web.HubSpot.Forms
                        Web.HubSpot.Types
  other-modules:
                        Web.HubSpot.Common
                        Web.HubSpot.Internal
  build-depends:
                        aeson >= 0.7,
                        base >= 4.6 && < 4.11,
                        bytestring,
                        hashable,
                        http-client >= 0.3,
                        http-conduit >= 2.3 && < 3.0,
                        http-types,
                        mime-types,
                        template-haskell,
                        text >= 0.11 && < 2.0,
                        time,
                        transformers,
                        unordered-containers
  ghc-options:          -Wall
                        -fwarn-identities
                        -fno-warn-unused-do-bind
                        -fwarn-incomplete-uni-patterns
                        -fwarn-incomplete-record-updates
                        -fwarn-redundant-constraints